syntax = "proto3";

package proto;

message DataOut {
  string id = 1;
  string name = 2;
  string status = 3;
}
