syntax = "proto3";

package proto;

message LogDataOut {
  string status = 1;
  string totalTime = 2;
}
